--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style/normalize.css" />
     <link rel="stylesheet" href="style/main.css" />
     <title>YouTube</title>
@@ -50,5 +55,191 @@
         <img src="img/avatar.jpg" alt="User Avatar" class="user-avatar" />
       </a>
     </header>
+    <div class="container">
+      <aside class="sidebar">
+        <nav class="nav">
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-home" width="20" height="19">
+                    <use xlink:href="svg/icons.svg#home"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Home</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-trending" width="16" height="21">
+                    <use xlink:href="svg/icons.svg#trending"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Trending</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-subsribtions" width="18" height="18">
+                    <use xlink:href="svg/icons.svg#subsribtions"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Subsribtions</span>
+              </a>
+            </li>
+          </ul>
+
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-library" width="20" height="19">
+                    <use xlink:href="svg/icons.svg#library"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Library</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-history" width="16" height="21">
+                    <use xlink:href="svg/icons.svg#history"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">History</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-watch-later" width="18" height="18">
+                    <use xlink:href="svg/icons.svg#watch-later"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Watch later</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-favourites" width="18" height="18">
+                    <use xlink:href="svg/icons.svg#favourites"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Favourites</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-liked" width="18" height="18">
+                    <use xlink:href="svg/icons.svg#liked"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Liked videos</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-music" width="18" height="18">
+                    <use xlink:href="svg/icons.svg#music"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Music</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-icon">
+                  <svg class="icon icon-games" width="18" height="18">
+                    <use xlink:href="svg/icons.svg#games"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Games</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <div class="nav-img">
+                  <svg class="icon icon-chevron-down" width="18" height="18">
+                    <use xlink:href="svg/icons.svg#chevron-down"></use>
+                  </svg>
+                </div>
+                <span class="nav-text">Show more</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <h2 class="nav-title">Subscribtions</h2>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <div class="nav-img">
+                <img src="img/sub-1.png" alt="" />
+              </div>
+              <span class="nav-text">Gussie Singleton</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <div class="nav-img">
+                <img src="img/sub-2.png" alt="" />
+              </div>
+              <span class="nav-text">Nora Francis</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <div class="nav-img">
+                <img src="img/sub-3.png" alt="" />
+              </div>
+              <span class="nav-text">Belle Briggs</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <div class="nav-img">
+                <img src="img/sub-4.png" alt="" />
+              </div>
+              <span class="nav-text">Eunice Cortez</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <div class="nav-img">
+                <img src="img/sub-5.png" alt="" />
+              </div>
+              <span class="nav-text">Emma Hanson</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <div class="nav-img">
+                <img src="img/sub-6.png" alt="" />
+              </div>
+              <span class="nav-text">Leah Berry</span>
+            </a>
+          </li>
+        </ul>
+
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <div class="nav-img">
+                <svg class="icon icon-settings" width="18" height="18">
+                  <use xlink:href="svg/icons.svg#settings"></use>
+                </svg>
+              </div>
+              <span class="nav-text">Settings</span>
+            </a>
+          </li>
+        </ul>
+      </aside>
+    </div>
   </body>
 </html>
