--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="style/main.css" />
     <title>YouTube</title>
   </head>
@@ -240,6 +244,171 @@
           </li>
         </ul>
       </aside>
+      <main class="content">
+        <div class="channel">
+          <a href="#" class="channel-title">
+            <img src="img/sub-1.png" alt="" class="channel-avatar" />
+            <span class="channel-text">Dollie Blair</span>
+          </a>
+          <!-- If we need navigation buttons -->
+          <div class="channel-buttons">
+            <div class="channel-button channel-button-prev">
+              <svg class="icon icon-left" width="28" height="28">
+                <use xlink:href="svg/icons.svg#left"></use>
+              </svg>
+            </div>
+            <div class="channel-button channel-button-next">
+              <svg class="icon icon-right" width="28" height="28">
+                <use xlink:href="svg/icons.svg#right"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- Slider main container -->
+          <div class="swiper-container channel-slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide channel-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img
+                      src="img/thumbnails/thumb-1.png"
+                      alt=""
+                      class="thumbnail"
+                    />
+                    <span class="video-duration"> 4:15 </span>
+                  </div>
+                  <!-- video thumb -->
+                  <h3 class="video-title">A Brief History Of Creation</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">80k views</span>
+                      <span class="video-date">3 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                </div>
+                <!-- video card end -->
+              </div>
+              <!-- slide end -->
+              <div class="swiper-slide channel-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img
+                      src="img/thumbnails/thumb-1.png"
+                      alt=""
+                      class="thumbnail"
+                    />
+                    <span class="video-duration"> 4:15 </span>
+                  </div>
+                  <!-- video thumb -->
+                  <h3 class="video-title">A Brief History Of Creation</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">80k views</span>
+                      <span class="video-date">3 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                </div>
+                <!-- video card end -->
+              </div>
+              <div class="swiper-slide channel-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img
+                      src="img/thumbnails/thumb-1.png"
+                      alt=""
+                      class="thumbnail"
+                    />
+                    <span class="video-duration"> 4:15 </span>
+                  </div>
+                  <!-- video thumb -->
+                  <h3 class="video-title">A Brief History Of Creation</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">80k views</span>
+                      <span class="video-date">3 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                </div>
+                <!-- video card end -->
+              </div>
+              <div class="swiper-slide channel-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img
+                      src="img/thumbnails/thumb-1.png"
+                      alt=""
+                      class="thumbnail"
+                    />
+                    <span class="video-duration"> 4:15 </span>
+                  </div>
+                  <!-- video thumb -->
+                  <h3 class="video-title">A Brief History Of Creation</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">80k views</span>
+                      <span class="video-date">3 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                </div>
+                <!-- video card end -->
+              </div>
+              <div class="swiper-slide channel-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img
+                      src="img/thumbnails/thumb-1.png"
+                      alt=""
+                      class="thumbnail"
+                    />
+                    <span class="video-duration"> 4:15 </span>
+                  </div>
+                  <!-- video thumb -->
+                  <h3 class="video-title">A Brief History Of Creation</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">80k views</span>
+                      <span class="video-date">3 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                </div>
+                <!-- video card end -->
+              </div>
+              <div class="swiper-slide channel-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img
+                      src="img/thumbnails/thumb-1.png"
+                      alt=""
+                      class="thumbnail"
+                    />
+                    <span class="video-duration"> 4:15 </span>
+                  </div>
+                  <!-- video thumb -->
+                  <h3 class="video-title">A Brief History Of Creation</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">80k views</span>
+                      <span class="video-date">3 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                </div>
+                <!-- video card end -->
+              </div>
+            </div>
+          </div>
+          <!-- Swiper container end -->
+        </div>
+      </main>
     </div>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
