--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,11 @@
           </svg>
         </button>
       </div>
+      <button class="mobile-search">
+        <svg class="icon icon-search" width="19" height="19">
+          <use xlink:href="svg/icons.svg#search"></use>
+        </svg>
+      </button>
       <div class="icons">
         <a href="#" class="icons-link">
           <svg class="icon icon-video" width="27" height="20">
@@ -59,6 +64,51 @@
         <img src="img/avatar.jpg" alt="User Avatar" class="user-avatar" />
       </a>
     </header>
+    <div class="mobile-sidebar">
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <div class="nav-icon">
+              <svg class="icon icon-home" width="20" height="19">
+                <use xlink:href="svg/icons.svg#home"></use>
+              </svg>
+            </div>
+            <span class="nav-text">Home</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <div class="nav-icon">
+              <svg class="icon icon-trending" width="16" height="21">
+                <use xlink:href="svg/icons.svg#trending"></use>
+              </svg>
+            </div>
+            <span class="nav-text">Trending</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <div class="nav-icon">
+              <svg class="icon icon-subsribtions" width="18" height="18">
+                <use xlink:href="svg/icons.svg#subsribtions"></use>
+              </svg>
+            </div>
+            <span class="nav-text">Subsribtions</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <div class="nav-icon">
+              <svg class="icon icon-library" width="20" height="19">
+                <use xlink:href="svg/icons.svg#library"></use>
+              </svg>
+            </div>
+            <span class="nav-text">Library</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+
     <div class="container">
       <aside class="sidebar">
         <nav class="nav">
@@ -581,10 +631,12 @@
                 alt="Food & Drink"
                 class="channel-avatar"
               />
-              <span class="channel-text">Food & Drink</span>
-              <span class="recommended-channel-subtitle"
-                >Recommended channel for you</span
-              >
+              <span class="recommended-channel-text">
+                <span class="channel-text">Food & Drink</span>
+                <span class="recommended-channel-subtitle"
+                  >Recommended channel for you</span
+                >
+              </span>
             </a>
 
             <button class="subscribe">Subscribe 2.3m</button>
